--- a/src/LiveBid.Api/appsettings.Development.json
+++ b/src/LiveBid.Api/appsettings.Development.json
@@ -4,5 +4,13 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=livebid_db;Username=postgres;Password=mysecretpassword"
+  },
+  "Jwt": {
+    "Key": "",
+    "Issuer": "http://localhost:5134",
+    "Audience": "http://localhost:5134"
   }
 }
