--- a/src/LiveBid.Api/LiveBid.Api.csproj
+++ b/src/LiveBid.Api/LiveBid.Api.csproj
@@ -17,5 +17,10 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.6" />
   </ItemGroup>
+  <ItemGroup>
+	<Content Update="appsettings.Development.json">
+		<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	</Content>
+  </ItemGroup>
 
 </Project>
